--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -105,7 +105,8 @@ if (Zend_Auth::getInstance()->hasIdentity()){
     </div>
 
 
- <?php if (Zend_Auth::getInstance()->hasIdentity()) { ?>
+    <?php /** 20180111 ronald: vorerst entfernt: if (Zend_Auth::getInstance()->hasIdentity() && $this->isSupporter($identity->member_id)) {**/ ?>
+    <?php if (Zend_Auth::getInstance()->hasIdentity()) { ?>
     <div id="review-product-modal" class="modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content" style="padding-bottom: 20px">
@@ -128,16 +129,26 @@ if (Zend_Auth::getInstance()->hasIdentity()){
             </div>
         </div>
     </div>
-
+    
     <?php } else {?>
         <div id="review-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
            <div class="modal-content" style="min-height: 100px; ">
-                <span style="text-align: center; display: block; padding-top: 30px">Please login in.</span>
+                <span style="text-align: center; display: block; padding-top: 30px">Please login.</span>
            </div>
          </div>          
         </div>
     <?php }?>
+
+    <?php /**} else {?>
+        <div id="review-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+           <div class="modal-content" style="min-height: 100px; ">
+               <span style="text-align: center; display: block; padding-top: 30px">Only registered members with an active supporting can vote. <a href="/support">Become a supporter</a> </span>
+           </div>
+         </div>          
+        </div>
+    <?php } **/ ?>
 
     <main id="product-page-content">
         <div class="flex-column">
