--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -693,8 +693,15 @@ $this->inlineScript()->appendScript(
                                 }
                             });
                         }
+                        
+                        //downloadlink is now: domain/api/files/download/id/ID/s/TOKEN/t/TIMESTAMP/FILE_NAME/u/USERID
+                        var hash = '<?= $this->download_hash ?>';
+                        var timetamp = '<?= $this->download_timestamp ?>';
+                        var userid = '<?= $this->authMember->member_id?>';
 
-                        var downloadLink = '<a href="' + pploadApiUri + 'files/download/id/' + this.id + '/' + this.name + '"  id="data-link' + this.id + '">' + this.name + '</a>';
+                        var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/' + this.name + '/u=' + userid;
+                        var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
+
                         if(this.active == '0') {
                         	deletePploadFileBtnPerFile = '';
                         	downloadLink = this.name;
