--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -699,7 +699,7 @@ $this->inlineScript()->appendScript(
                         var timetamp = '<?= $this->download_timestamp ?>';
                         var userid = '<?= $this->authMember->member_id?>';
 
-                        var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/u=' + userid + '/' + this.name;
+                        var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name;
                         var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
 
                         if(this.active == '0') {
