--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -764,7 +764,7 @@ $categoryPath[] = $valueCatId;
                                 //downloadlink is now: domain/api/files/download/id/ID/s/TOKEN/t/TIMESTAMP/FILE_NAME/u/USERID
                                 var hash = '<?= $this->download_hash ?>';
                                 var timetamp = '<?= $this->download_timestamp ?>';
-                                var userid = '<?= $this->authMember->member_id?>';
+                                var userid = '<?= $this->member_id?>';
 
                                 var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name;
                                 var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
